# rsecure

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  cog.toml  deny.toml  fedora.yml  install.sh  pre-commit.sh  review.md  text_to_encrypt.txt
.claude/skills/release/: SKILL.md
.github/: release.yml
.github/workflows/: auto-merge.yml  build.yml  ci-cd.yml  release.yml  release.yml.disabled
Casks/: rsecure.rb
docs/: local_dev.md  skills.md
packaging/arch/: .SRCINFO  PKGBUILD.template  build.sh
scripts/: fake_data.sh
src/: cli.rs  crypto.rs  file_ops.rs  format.rs  macros.rs  main.rs  utils.rs
src/cli/: args.rs  mod.rs
src/commands/: create_key.rs  decrypt_file.rs  encrypt_file.rs  mod.rs
tests/: cli.rs
