[package]
name = "rsecure"
version = "0.3.2"
edition = "2024"
authors = ["containerscrew info@containerscrew.com"]
rust-version = "1.93.0"
description = "A simple file encryption and decryption tool using AES-GCM."
repository = "https://github.com/containerscrew/rsecure"
license-file = "LICENSE"

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"
walkdir = "2.3.3"
colored = "3.1.1"

[profile.release]
strip = "debuginfo"

[dev-dependencies]
tempfile = "3.25.0"
assert_cmd = "2"
predicates = "3"
