[package]
name = "rsecure"
version = "0.6.0"
edition = "2024"
authors = ["containerscrew info@containerscrew.com"]
rust-version = "1.94.0"
description = "A simple file encryption and decryption tool using AES-GCM."
repository = "https://github.com/containerscrew/rsecure"
license-file = "LICENSE"
readme = "README.md"
keywords = ["encryption", "aes-gcm", "cli", "security", "cryptography"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["stream"] }
argon2 = "0.5.3"
hkdf = "0.13.0"
rpassword = "7.4.0"
sha2 = "0.10.9"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
walkdir = "2.3.3"
rayon = "1.12.0"
indicatif = "0.18.4"
console = "0.16"

[profile.release]
strip = "debuginfo"

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2"
predicates = "3"
aes-gcm = { version = "0.10.3", features = ["stream"] }
